# strategy

./: .cursorrules  .gitignore  BUILD.md  Cargo.toml  Cozy Kingdom.icns  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SIGNING.md  UI_MARKUP_GUIDE.md  UI_MARKUP_IMPLEMENTATION_REPORT.md  build-macos.sh  build-windows.sh  bundle.toml  config.toml  create-icon.sh  installer.nsi  sign-macos.sh
.github/workflows/: build-macos.yml  build-windows.yml  version-bump.yml
assets/: buildings.aseprite  faces.aseprite  ich_label.aseprite  icon.aseprite  props.aseprite  trees.aseprite
assets/ui/: building_panel.ui  console.ui  main.ui  notifications.ui  research_tree.ui  theme.ui  tooltips.ui
shaders/: building.wgsl  building_particles.wgsl  citizen.wgsl  fog.wgsl  glow.wgsl  props_viewer.wgsl  resource.wgsl  tile.wgsl  ui.wgsl  ui_props.wgsl  ui_rect.wgsl  weather.wgsl
src/: atlas.rs  building_production.rs  camera.rs  citizen_state.rs  commands.rs  config.rs  console.rs  controls.rs  event_handler.rs  game.rs  game_loop.rs  game_state.rs  globals.rs  gpu_renderer.rs  input.rs  jobs.rs  lib.rs  main.rs  menu.rs  music.rs  notifications.rs  palette.rs  path.rs  quests.rs  render_prep.rs  research.rs  resource_path.rs  resource_visitor.rs  save.rs  tutorial.rs  types.rs  ui.rs  ui_gpu.rs  ui_interaction.rs  weather.rs  world.rs
src/render/: atlas_renderer.rs  building_renderer.rs  gpu.rs  map.rs  mod.rs  texture_manager.rs  tile_renderer.rs  tiles.rs  ui_renderer.rs  utils.rs  wgpu_renderer.rs
src/render/shaders/: basic.wgsl  colored.wgsl  grid.wgsl  textured.wgsl
src/ui_markup/: README.md  ast.rs  binary.rs  bindings.rs  components.rs  context.rs  event.rs  integration.rs  layout.rs  lexer.rs  mod.rs  parser.rs  renderer.rs  theme.rs
