[package]
name = "strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glam = "0.30.5"
image = "0.25"
noise = "0.9.0"
pixels = "0.15.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"
winit = "0.29.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
