[package]
name = "strategy"
version = "0.1.0"
edition = "2024"
default-run = "strategy"
description = "Cozy Kingdom - A cozy medieval strategy game"
authors = ["Korolev Roman <kash244@yandex.ru>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KashN9sh/strategy"

[dependencies]
anyhow = "1.0.98"
glam = { version = "0.30.5", features = ["serde"] }
image = "0.25"
noise = "0.9.0"
# pixels = "0.15.0"  # будем заменять на wgpu
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"
winit = "0.29.15"
wgpu = "0.19"
bytemuck = { version = "1.0", features = ["derive"] }
pollster = "0.3"
env_logger = "0.10"
rodio = "0.18"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Основной бинарник (игра) - запускается по умолчанию через cargo run
[[bin]]
name = "strategy"
path = "src/main.rs"

# Утилита для просмотра props.png - запускается через cargo run --bin props_viewer
[[bin]]
name = "props_viewer"
path = "src/bin/props_viewer.rs"
